--- a/index.html
+++ b/index.html
@@ -3,50 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My prortfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <header>
-      <h1>My prortfolio</h1>
-      <p>welcome to mypersonal website</p>
-    </header>
-    <section class="about">
-      <h2>About me</h2>
-      <img src="my pic2.jpg" alt=" profile picture" />
-      <p>
-        hello ! i`m suman regmi a passionate
-        <b>certified gym intructorand personal trainer </b>dedicted to helping
-        people achive their fitness goals.
-      </p>
-    </section>
-    <section id="projects">
-      <h2>My fitness Programs</h2>
-      <div class="project">
-        <img src="my pic.jpg" alt="project 1" />
-        <h3>project 1: Weight loss training</h3>
-        <p>
-          A 3 months intensive program focusedon cardio,strength training , and
-          a healthy diet plan.
-        </p>
-      </div>
-      <div class="project">
-        <h3>project 2: Strenth Training Program</h3>
-        <img src="my pic2.jpg" alt=" project 2" />
-        <p>
-          customized workout routines to build muscle and improve endurance,
-          tailored to individual fitness levels.
-        </p>
-      </div>
-    </section>
-    <footer>
-      <p>
-        Contant me at:
-        <a
-          href="https://www.instagram.com/work_with_suman_out/?fbclid=IwZXh0bgNhZW0CMTEAAR34gpd7ukfy9Q1FBDEa0_5ppL-6ZxGcOJ_-tZOKcpVs1GGppIk-zhiBq_0_aem_XfZ-sak3DST4YKROKvgmCw"
-          >instagram</a
-        >
-      </p>
-    </footer>
+    <h1 style="display: inline; padding: auto;background-color: rgb(31, 189, 57); margin: 75px;">ABOUT ME </h1>
+    <ul>
+      <li style="display: inline-block; padding: 10px;"><a href="/"><b>HOME</b></a></li>
+
+      <li style="display: inline-block; padding: 10px;">
+        <a href="about.html"><b>ABOUT ME</b></a>
+      </li>
+
+      <lis style="display: inline-block; padding: 10px;"><a href="my skils.html"><b>MY SKILLS</b></a></li>
+
+      <li style="display: inline-block; padding: 10px;"><a href="future goals.html"><b>FUTURE GOALS</b></a></li>
+    </ul>
+    <img src="my.jpg" width="300px" height="350px" alt="" />
+    <p>
+      hello, i am a dedicated house wife ,managing my home and family with love
+      and care.
+    </p>
   </body>
 </html>
