--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       HI ,i`m su mee ,a full time housewife and proud homemaker .I take care of
       my family, manage househelod chores,and love cooking and
       organizing.besides that, ienjoy learning new things, whether it`s
-      parenting tips, budgeting,or even exploring creative hobbies.
+      parenting tips, budgeting,or even exploring creative hobbies.<p style="color: chocolate;font-size: larger;"><b style="font-size: larger; "> Everyone has habits some good and some bad .I have a few habits that i need to work on , such as overthinking , seeking perfection , laziness, getting angry quickly ,and rusing things. these habits sometimes create problems in my daily life, and  I want to improve them.</b></p>
     </p>
   </body>
 </html>
